mudanca de teste

--- a/UberDist/WebContent/_template.xhtml
+++ b/UberDist/WebContent/_template.xhtml
@@ -17,6 +17,7 @@
 <h:body>
 	<div id="cabecalho">
 		<h:graphicImage library="img" name="logo-uber.png" id="logoCompany" />
+<!-- 		fazendo teste -->
 	</div>
 	
 	<div id="usuarioLogado">
